Added database, services and note controller

--- a/SEDC.WebApi.Notes/SEDC.WebApi.Notes.Api/appsettings.json
+++ b/SEDC.WebApi.Notes/SEDC.WebApi.Notes.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AppSettings": {
+    "ConnString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=NotesApp_DB"
+  },
+    "AllowedHosts": "*"
+  }
