--- a/SEDC.WebApi.Notes/SEDC.WebApi.Notes.DataAccess/SEDC.WebApi.Notes.DataAccess.csproj
+++ b/SEDC.WebApi.Notes/SEDC.WebApi.Notes.DataAccess/SEDC.WebApi.Notes.DataAccess.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
       <PrivateAssets>all</PrivateAssets>
@@ -17,9 +18,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SEDC.WebApi.Notes.Common\SEDC.WebApi.Notes.Common.csproj" />
     <ProjectReference Include="..\SEDC.WebApi.Notes.DataModels\SEDC.WebApi.Notes.DataModels.csproj" />
   </ItemGroup>
 
